--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,17 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v3
 
+      - name: Setup SSH Key
+        run: |
+          echo "${{ secrets.EC2_KEY }}" | base64 --decode > ec2-key.pem
+          chmod 600 ec2-key.pem
+
       - name: Upload index.html to EC2 (/tmp)
         uses: appleboy/scp-action@v0.1.4
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          key: ./ec2-key.pem    # gunakan file hasil decode
           source: "index.html"
           target: "/tmp"
 
@@ -27,6 +32,6 @@ jobs:
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_KEY }}
+          key: ./ec2-key.pem
           script: |
             sudo mv /tmp/index.html /var/www/html/index.html
